force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Closing_Disclosure_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closing_Disclosure_Issued_Date__c</fullName>
    <description>The user manually populates this field with the date the Closing Disclosure is delivered to the applicant.</description>
    <inlineHelpText>Enter the date the Closing Disclosure is delivered to the applicant.</inlineHelpText>
    <label>Closing Disclosure Issued Date</label>
    <type>Date</type>
</CustomField>