force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Desired_Cash_Out_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Desired_Cash_Out_Amount_2__c</fullName>
    <description>The user populates this text field to determine the desired amount of cash out for the borrower.</description>
    <inlineHelpText>Enter the total requested amount of cash out by the borrower. Must be a numerical value.</inlineHelpText>
    <label>Desired Cash Out Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>