force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Down_Payment_2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Down_Payment_2__c</fullName>
    <description>The user populates this required text field to record the borrower’s total down payment contribution. By default, this field is blank.</description>
    <inlineHelpText>Enter the total down payment amount. Must be a numerical value.</inlineHelpText>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>