force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__First_Time_Home_Buyer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__First_Time_Home_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user selects this checkbox to indicate if the mortgage applicant is a first-time home buyer. By default, it is set to false.</description>
    <inlineHelpText>Select this checkbox if the applicant is a first-time home buyer.</inlineHelpText>
    <label>Is A First-Time Home Buyer?</label>
    <type>Checkbox</type>
</CustomField>