force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Is_Inspected_By_The_Lender__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Inspected_By_The_Lender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually populates this checkbox field to indicate if the lender will inspect the property.</description>
    <inlineHelpText>Select this checkbox if the lender will inspect the property.</inlineHelpText>
    <label>Is Inspected By The Lender?</label>
    <type>Checkbox</type>
</CustomField>