force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Is_Jumbo__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Jumbo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>-D The user manually selects this checkbox field to indicate that the loan is a jumbo loan for Sherman calculations. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox to indicate that the loan is a jumbo loan.</inlineHelpText>
    <label>-D Is Jumbo</label>
    <type>Checkbox</type>
</CustomField>