force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this mandatory lookup field with the lookup key that associates the loan record to the mortgage values.</description>
    <inlineHelpText>The system automatically populates this field with a lookup key that associates the loan record to the mortgage values.</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Mortgages</relationshipLabel>
    <relationshipName>Mortgages</relationshipName>
    <type>Lookup</type>
</CustomField>