force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Loan_Estimate_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Estimate_Issued_Date__c</fullName>
    <description>The user manually populates this field with the date the Loan Estimate is delivered to the applicant.</description>
    <inlineHelpText>Enter the date the Loan Estimate is delivered to the applicant.</inlineHelpText>
    <label>Loan Estimate Issued Date</label>
    <type>Date</type>
</CustomField>