force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Mortgage_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Mortgage_Insurance_Premium__c</fullName>
    <description>The system automatically populates this currency field to record an applicant’s mortgage insurance premium. By default, this field is blank.</description>
    <inlineHelpText>This field displays the applicant’s mortgage insurance premium.</inlineHelpText>
    <label>Mortgage Insurance Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>