force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Multiple_Advance_Rationale__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Multiple_Advance_Rationale__c</fullName>
    <description>The User manually selects this required picklist field if requesting an advance to select a Progress Advance Type. By default, the value is blank.</description>
    <inlineHelpText>Select the reason for multiple advances of the loan.</inlineHelpText>
    <label>Multiple Advance Rationale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Self-Build</fullName>
            </value>
            <value>
                <fullName>Pre-Fabricated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>