force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Purchase_Price_2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Purchase_Price_2__c</fullName>
    <description>The user populates this required text field to record the purchase price of the property. By default, this field is blank.</description>
    <inlineHelpText>Enter the purchase price for the property. Must be a numerical value.</inlineHelpText>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>