force-app/main/default/objects/LLC_BI__Mortgage__c/fields/LLC_BI__Total_Loan_Cost_Over_5_Years__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Loan_Cost_Over_5_Years__c</fullName>
    <description>The system automatically populates this mandatory field with the total loan cost the borrower will pay over 5 years.</description>
    <inlineHelpText>This system-populated field displays the total loan cost the borrower will pay over 5 years.</inlineHelpText>
    <label>Total Loan Cost Over 5 Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>